<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwipeableCardStack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="toggle_swipe">toggle swipe</string>
    <string name="visible_size">visible size</string>
    <string name="discard_top">discard top</string>

</resources>
