<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity">

    <item
        android:id="@+id/action_discard_top"
        android:orderInCategory="100"
        android:title="@string/discard_top"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_swipe"
        android:orderInCategory="100"
        android:title="@string/toggle_swipe"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/reset"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_visible_size"
        android:orderInCategory="100"
        android:title="@string/visible_size"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
